--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,12 @@
 h1{
-    color: blue;
+  color: red;  
+  font-size: 10rem;
+}
+
+.parrafito{
+    color: green;
+}
+
+#tiny-title{
+    font-weight: 100;
 }
